Context manager in examples (#434)
* context manager recording for langchain agents

* context manager langchain groundtruth

* clear output

* add comment

* langchain math agent context manager

* package versions

* context manager in lc model comparison

* context manager in lc quickstart

* lc summarize context manager

* llama agents context manager

* llama groundtruth context manager

* llama index query planning

* llama quickstart context manager

* alpaca context manager

* update feedbacks

* azure openai context manager

* faiss context manager

* milvus context manager

* remove outdate pinecone examples

* pinecone simple context manager updates

* no framework quickstart with context manager

--- a/trulens_eval/examples/frameworks/langchain/langchain_agents.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_agents.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ! pip install trulens==0.9.0 langchain==0.0.263 yfinance==0.2.27 google-search-results==2.4.2"
+    "# ! pip install trulens==0.11.0 langchain==0.0.283 yfinance==0.2.28 google-search-results==2.4.2"
    ]
   },
   {
@@ -82,6 +82,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -100,6 +101,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -128,6 +130,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -171,15 +174,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tru.run_dashboard()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "prompts = [\n",
     "    \"What company acquired MosaicML?\",\n",
     "    \"What's the best way to travel from NYC to LA?\",\n",
@@ -189,11 +183,13 @@
     "    \"I'm interested in buying a new smartphone from the producer with the highest stock price. Which company produces the smartphone I should by and what is their current stock price?\"\n",
     "]\n",
     "\n",
-    "for prompt in prompts:\n",
-    "    tru_agent.call_with_record(prompt)"
+    "with tru_agent as recording:\n",
+    "    for prompt in prompts:\n",
+    "        agent(prompt)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -203,6 +199,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -235,6 +232,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -293,6 +291,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -311,6 +310,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -327,6 +327,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -339,8 +340,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for prompt in prompts:\n",
-    "    tru_agent.call_with_record(prompt)"
+    "# wrapped agent can act as context manager\n",
+    "with tru_agent as recording:\n",
+    "    for prompt in prompts:\n",
+    "        agent(prompt)"
    ]
   },
   {
