--- a/trulens_eval/examples/frameworks/langchain/langchain_math_agent.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_math_agent.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -12,6 +13,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ! pip install trulens==0.9.0 langchain==0.0.263"
+    "# ! pip install trulens==0.11.0 langchain==0.0.283"
    ]
   },
   {
@@ -42,6 +44,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -60,6 +63,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -86,10 +90,11 @@
     "\n",
     "agent = initialize_agent(tools, llm, agent=AgentType.OPENAI_FUNCTIONS, verbose=True)\n",
     "\n",
-    "app = TruChain(agent)"
+    "tru_agent = TruChain(agent)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -102,10 +107,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app(inputs={\"input\": \"how much is Euler's number divided by PI\"})"
+    "with tru_agent as recording:\n",
+    "    agent(inputs={\"input\": \"how much is Euler's number divided by PI\"})"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
