--- a/trulens_eval/examples/frameworks/langchain/langchain_quickstart.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_quickstart.ipynb
@@ -172,7 +172,11 @@
     "# Instrumented chain can operate like the original:\n",
     "llm_response = truchain(prompt_input)\n",
     "\n",
-    "display(llm_response)"
+    "display(llm_response)\n",
+    "\n",
+    "# or as a context manager\n",
+    "with truchain as recording:\n",
+    "    chain(prompt_input)"
    ]
   },
   {
@@ -276,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
