--- a/trulens_eval/examples/frameworks/langchain/langchain_summarize.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_summarize.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -12,6 +13,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ! pip install trulens==0.9.0 langchain==0.0.263"
+    "# ! pip install trulens==0.11.0 langchain==0.0.283"
    ]
   },
   {
@@ -43,6 +45,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -58,8 +61,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"HUGGINGFACE_API_KEY\"] = \"...\"\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"...\""
+    "os.environ[\"OPENAI_API_KEY\"] = \"...\"\n",
+    "os.environ[\"HUGGINGFACE_API_KEY\"] = \"...\""
    ]
   },
   {
@@ -110,10 +113,14 @@
     "text = billsum['text'][0]\n",
     "\n",
     "docs, chain = get_summary_model(text)\n",
-    "output, record = wrap_chain_trulens(chain).call_with_record(docs)"
+    "\n",
+    "# use wrapped chain as context manager\n",
+    "with wrap_chain_trulens(chain) as recording:\n",
+    "    chain(docs)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
