--- a/trulens_eval/examples/frameworks/llama_index/llama_index_agents.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llama_index_agents.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -26,6 +27,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -38,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#! pip install trulens_eval==0.7.0 llama_index==0.7.11 llama_hub==0.0.13 yelpapi==2.5.0"
+    "#! pip install trulens_eval==0.11.0 llama_index==0.8.21 llama_hub==0.0.27 yelpapi==2.5.0"
    ]
   },
   {
@@ -71,6 +73,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -121,6 +124,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -144,6 +148,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -165,6 +170,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -201,6 +207,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -214,31 +221,32 @@
    "outputs": [],
    "source": [
     "custom = OpenAI_custom()\n",
-    "f_query_translation = Feedback(custom.query_translation_score).on_input().on(\n",
+    "f_query_translation = Feedback(custom.query_translation_score, name = \"Query Translation\").on_input().on(\n",
     "    Select.Record.calls[0].args.str_or_query_bundle # check the query bundle passed to yelp api\n",
     ")\n",
-    "f_ratings_usage = Feedback(custom.ratings_usage).on(\n",
+    "f_ratings_usage = Feedback(custom.ratings_usage, name = \"Ratings Usage\").on(\n",
     "    Select.Record.calls[0].rets.response # check the last content chunk for mentions of ratings or reviews\n",
     ")\n",
     "\n",
     "fopenai = fOpenAI()\n",
     "# Question/statement (context) relevance between question and last context chunk (i.e. summary)\n",
-    "f_qs_relevance = Feedback(fopenai.qs_relevance).on_input().on(\n",
+    "f_context_relevance = Feedback(fopenai.qs_relevance, name = \"Context Relevance\").on_input().on(\n",
     "    Select.Record.calls[0].rets.response # check context\n",
     ")\n",
     "\n",
     "# Question/answer relevance between overall question and answer.\n",
-    "f_qa_relevance = Feedback(fopenai.relevance).on_input_output()\n",
+    "f_qa_relevance = Feedback(fopenai.relevance, name = \"Answer Relevance\").on_input_output()\n",
     "\n",
     "# Groundedness\n",
     "grounded = Groundedness(groundedness_provider=fopenai)\n",
     "\n",
-    "f_groundedness = Feedback(grounded.groundedness_measure).on(\n",
+    "f_groundedness = Feedback(grounded.groundedness_measure, name = \"Groundedness\").on(\n",
     "    Select.Record.calls[0].rets.response # check context\n",
     ").on_output().aggregate(grounded.grounded_statements_aggregator)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -263,10 +271,11 @@
     "    {\"query\": \"What's the best diner in Toronto?\", \"response\": \"The George Street Diner\"}\n",
     "]\n",
     "\n",
-    "f_groundtruth = Feedback(GroundTruthAgreement(golden_set).agreement_measure).on_input_output()"
+    "f_groundtruth = Feedback(GroundTruthAgreement(golden_set).agreement_measure, name = \"Ground Truth Eval\").on_input_output()"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -285,6 +294,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -299,13 +309,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yelp_app = TruLlama(agent,\n",
+    "tru_agent = TruLlama(agent,\n",
     "    app_id='YelpAgent',\n",
     "    tags = \"agent prototype\",\n",
-    "    feedbacks = [f_qa_relevance, f_groundtruth, f_qs_relevance, f_groundedness, f_query_translation, f_ratings_usage])"
+    "    feedbacks = [f_qa_relevance, f_groundtruth, f_context_relevance, f_groundedness, f_query_translation, f_ratings_usage])"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -322,10 +333,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "standalone_app = TruBasicApp(llm_standalone, app_id=\"OpenAIChatCompletion\", tags = \"comparison\", feedbacks=[f_qa_relevance, f_groundtruth])"
+    "tru_llm_standalone = TruBasicApp(llm_standalone, app_id=\"OpenAIChatCompletion\", tags = \"comparison\", feedbacks=[f_qa_relevance, f_groundtruth])"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -354,8 +366,10 @@
    "outputs": [],
    "source": [
     "for prompt in prompt_set:\n",
-    "    standalone_app.call_with_record(prompt)\n",
-    "    yelp_app.query(prompt)"
+    "    with tru_llm_standalone as recording:\n",
+    "        llm_standalone(prompt)\n",
+    "    with tru_agent as recording:\n",
+    "        agent.query(prompt)"
    ]
   }
  ],
