--- a/trulens_eval/examples/frameworks/llama_index/llama_index_quickstart.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llama_index_quickstart.ipynb
@@ -178,8 +178,11 @@
    "source": [
     "# Instrumented query engine can operate like the original:\n",
     "llm_response = tru_query_engine.query(\"What did the author do growing up?\")\n",
+    "print(llm_response)\n",
     "\n",
-    "print(llm_response)"
+    "# or as context manager\n",
+    "with tru_query_engine as recording:\n",
+    "    query_engine.query(\"What did the author do growing up?\")"
    ]
   },
   {
