--- a/trulens_eval/examples/models/alpaca7b_local_llm.ipynb
+++ b/trulens_eval/examples/models/alpaca7b_local_llm.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -48,6 +49,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -65,11 +67,12 @@
         "import os\n",
         "os.environ[\"OPENAI_API_KEY\"] = \"...\"\n",
         "feedback_openai = Feedback_OpenAI()\n",
-        "qs_relevance = Feedback(feedback_openai.qs_relevance).on_input_output()\n",
+        "qa_relevance = Feedback(feedback_openai.relevance, name = \"Answer Relevance\").on_input_output()\n",
         "# By default this will evaluate feedback on main app input and main app output."
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "UhauDrynY0cj"
@@ -101,6 +104,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "hb5iT0OMqISl"
@@ -151,6 +155,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -197,6 +202,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -213,6 +219,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -236,14 +243,14 @@
         "# Instead of window memory, let's use token memory to match the model token limit\n",
         "token_memory = ConversationTokenBufferMemory(llm = local_llm, max_token_limit=400)\n",
         "\n",
-        "conversation = ConversationChain(\n",
+        "chain = ConversationChain(\n",
         "    llm=local_llm, \n",
         "    verbose=True, \n",
         "    memory=token_memory\n",
         ")\n",
         "\n",
         "# wrap with truchain to instrument your chain\n",
-        "tc_conversation = tru.Chain(conversation, app_id='GardeningAIwithMemory_v2', feedbacks=[qs_relevance])"
+        "tru_chain = tru.Chain(conversation, app_id='GardeningAIwithMemory_v2', feedbacks=[qa_relevance])"
       ]
     },
     {
@@ -252,8 +259,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "response, record = tc_conversation.call_with_record(\"What kind of pests I should worry about?\")\n",
-        "display(response)"
+        "prompts = [\"What kind of pests I should worry about?\",\n",
+        "           \"What kind of flowers will grow best in the northeast US?\",\n",
+        "           \"What is the typical soil make-up in gardens in my area?\",\n",
+        "           \"I'd like to grow a large tree in my backyard. Any recommendations that work well with the soil?\",\n",
+        "           \"What other garden improvements should I make to complement these tree recommendations?\"]"
       ]
     },
     {
@@ -262,41 +272,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "response, record = tc_conversation.call_with_record(\"What kind of flowers will grow best in the northeast US?\")\n",
-        "display(response)"
+        "with tru_chain as recording:\n",
+        "    for prompt in prompts:\n",
+        "        chain(prompt)"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "response, record = tc_conversation.call_with_record(\"What is the typical soil make-up in gardens in my area?\")\n",
-        "display(response)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "response, record = tc_conversation.call_with_record(\"I'd like to grow a large tree in my backyard. Any recommendations that work well with the soil?\")\n",
-        "display(response)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "response, record = tc_conversation.call_with_record(\"What other garden improvements should I make to complement these tree recommendations?\")\n",
-        "display(response)"
-      ]
-    },
-    {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
