--- a/trulens_eval/examples/vector-dbs/faiss/langchain_faiss_example.ipynb
+++ b/trulens_eval/examples/vector-dbs/faiss/langchain_faiss_example.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -10,13 +11,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Extra packages may be necessary:\n",
-    "# ! pip install faiss-cpu"
+    "### Import packages"
    ]
   },
   {
@@ -25,8 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.environ['OPENAI_API_KEY'] = \"fill in\""
+    "# Extra packages may be necessary:\n",
+    "# ! pip install faiss-cpu unstructured==0.10.12"
    ]
   },
   {
@@ -56,6 +55,32 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set API keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ['OPENAI_API_KEY'] = \"...\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create vector db"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -76,13 +101,19 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create retriever"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create the example app.\n",
-    "\n",
     "class VectorStoreRetrieverWithScore(VectorStoreRetriever):\n",
     "\n",
     "    def _get_relevant_documents(\n",
@@ -105,9 +136,24 @@
     "            )\n",
     "        else:\n",
     "            raise ValueError(f\"search_type of {self.search_type} not allowed.\")\n",
-    "        return docs\n",
-    "\n",
-    "\n",
+    "        return docs"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the example app.\n",
     "class FAISSWithScore(FAISS):\n",
     "\n",
     "    def as_retriever(self) -> VectorStoreRetrieverWithScore:\n",
@@ -125,16 +171,37 @@
     "        embeddings = OpenAIEmbeddings()\n",
     "        faiss_store = FAISSWithScore.load_local(\"faiss_index\", embeddings)\n",
     "        print(\"Faiss vector DB loaded\")\n",
-    "        return faiss_store\n",
-    "\n",
+    "        return faiss_store"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set up evals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create a feedback function.\n",
     "openai = feedback.OpenAI()\n",
     "\n",
-    "f_qs_relevance = Feedback(openai.qs_relevance).on_input().on(\n",
+    "f_qs_relevance = Feedback(openai.qs_relevance, name = \"Context Relevance\").on_input().on(\n",
     "    Select.Record.app.combine_docs_chain._call.args.inputs.input_documents[:].page_content\n",
-    ").aggregate(np.min)\n",
-    "\n",
-    "\n",
+    ").aggregate(np.min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Bring it all together.\n",
     "def load_conversational_chain(vector_store):\n",
     "    llm = ChatOpenAI(\n",
@@ -154,7 +221,7 @@
     "        with_hugs=False\n",
     "    )\n",
     "\n",
-    "    return truchain"
+    "    return chain, truchain"
    ]
   },
   {
@@ -165,9 +232,10 @@
    "source": [
     "# Run example:\n",
     "vector_store = FAISSStore.load_vector_store()\n",
-    "chain = load_conversational_chain(vector_store)\n",
+    "chain, tru_chain = load_conversational_chain(vector_store)\n",
     "\n",
-    "ret, record = chain.call_with_record({\"question\": \"What is trulens?\", \"chat_history\":\"\"})"
+    "with tru_chain as recording:\n",
+    "    ret = chain({\"question\": \"What is trulens?\", \"chat_history\":\"\"})"
    ]
   },
   {
@@ -186,19 +254,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check record.\n",
-    "record.dict()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Check that components of the app have been instrumented despite various\n",
     "# subclasses used.\n",
-    "chain.print_instrumented()"
+    "tru_chain.print_instrumented()"
    ]
   },
   {
@@ -208,7 +266,7 @@
    "outputs": [],
    "source": [
     "# Start dashboard to inspect records.\n",
-    "proc = Tru().start_dashboard()"
+    "Tru().run_dashboard()"
    ]
   }
  ],
@@ -228,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
