--- a/trulens_eval/examples/vector-dbs/milvus/milvus_simple.ipynb
+++ b/trulens_eval/examples/vector-dbs/milvus/milvus_simple.ipynb
@@ -86,6 +86,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -105,6 +106,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -123,6 +125,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -141,6 +144,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -177,15 +181,15 @@
     "\n",
     "# Define groundedness\n",
     "grounded = Groundedness(groundedness_provider=openai)\n",
-    "f_groundedness = Feedback(grounded.groundedness_measure).on(\n",
+    "f_groundedness = Feedback(grounded.groundedness_measure, name = \"Groundedness\").on(\n",
     "    TruLlama.select_source_nodes().node.text # context\n",
     ").on_output().aggregate(grounded.grounded_statements_aggregator)\n",
     "\n",
     "# Question/answer relevance between overall question and answer.\n",
-    "f_qa_relevance = Feedback(openai.relevance).on_input_output()\n",
+    "f_qa_relevance = Feedback(openai.relevance, name = \"Answer Relevance\").on_input_output()\n",
     "\n",
     "# Question/statement relevance between question and each context chunk.\n",
-    "f_qs_relevance = Feedback(openai.qs_relevance).on_input().on(\n",
+    "f_qs_relevance = Feedback(openai.qs_relevance, name = \"Context Relevance\").on_input().on(\n",
     "    TruLlama.select_source_nodes().node.text\n",
     ").aggregate(np.mean)"
    ]
@@ -215,10 +219,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Instrumented query engine can operate like the original:\n",
-    "llm_response = tru_query_engine.query(\"What did the author do growing up?\")\n",
-    "\n",
-    "print(llm_response)"
+    "# Instrumented query engine can operate as a context manager\n",
+    "with tru_query_engine as recording:\n",
+    "    llm_response = query_engine.query(\"What did the author do growing up?\")\n",
+    "    print(llm_response)"
    ]
   },
   {
