--- a/trulens_eval/examples/vector-dbs/pinecone/constructing_optimal_pinecone.ipynb
+++ b/trulens_eval/examples/vector-dbs/pinecone/constructing_optimal_pinecone.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -34,6 +35,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -45,6 +47,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -52,6 +55,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -71,6 +75,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -92,6 +97,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "OPpcO-TwuQwD"
@@ -142,6 +148,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -164,6 +171,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -181,6 +189,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -197,6 +206,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -227,6 +237,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -258,6 +269,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "ZCvtmREd0pdo"
@@ -285,7 +297,7 @@
     "    temperature=0.0\n",
     ")\n",
     "\n",
-    "qa = RetrievalQA.from_chain_type(\n",
+    "chain_v1 = RetrievalQA.from_chain_type(\n",
     "    llm=llm,\n",
     "    chain_type=\"stuff\",\n",
     "    retriever=vectorstore.as_retriever()\n",
@@ -293,6 +305,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -319,11 +332,11 @@
     "openai = feedback.OpenAI()\n",
     "\n",
     "# Question/answer relevance between overall question and answer.\n",
-    "qa_relevance = Feedback(openai.relevance).on_input_output()\n",
+    "qa_relevance = Feedback(openai.relevance, name = \"Answer Relevance\").on_input_output()\n",
     "# By default this will evaluate feedback on main app input and main app output.\n",
     "\n",
-    "# Question/statement relevance between question and each context chunk.\n",
-    "qs_relevance = Feedback(openai.qs_relevance).on_input().on(\n",
+    "# Context relevance between question and each context chunk.\n",
+    "qs_relevance = Feedback(openai.qs_relevance, name = \"Context Relevance\").on_input().on(\n",
     "    Select.Record.app.combine_documents_chain._call.args.inputs.input_documents[:].page_content\n",
     ").aggregate(np.mean)"
    ]
@@ -337,12 +350,13 @@
    "outputs": [],
    "source": [
     "# wrap with TruLens\n",
-    "truchain = TruChain(qa,\n",
+    "tru_chain_v1 = TruChain(chain_v1,\n",
     "    app_id='Chain1_WikipediaQA',\n",
     "    feedbacks=[qa_relevance, qs_relevance])"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -355,14 +369,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "truchain(\"Name some famous dental floss brands?\")\n",
-    "truchain(\"Which year did Cincinatti become the Capital of Ohio?\")\n",
-    "truchain(\"Which year was Hawaii's state song written?\")\n",
-    "truchain(\"How many countries are there in the world?\")\n",
-    "truchain(\"How many total major trophies has manchester united won?\")"
+    "prompts = [\"Name some famous dental floss brands?\",\n",
+    "           \"Which year did Cincinatti become the Capital of Ohio?\",\n",
+    "           \"Which year was Hawaii's state song written?\",\n",
+    "           \"How many countries are there in the world?\",\n",
+    "           \"How many total major trophies has manchester united won?\"\n",
+    "]"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tru_chain_v1 as recording:\n",
+    "    for prompt in prompts:\n",
+    "        chain_v1(prompt)"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -390,6 +417,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -443,14 +471,14 @@
     "\n",
     "\n",
     "# recreate qa from vector store\n",
-    "qa = RetrievalQA.from_chain_type(\n",
+    "chain_v2 = RetrievalQA.from_chain_type(\n",
     "    llm=llm,\n",
     "    chain_type=\"stuff\",\n",
     "    retriever=vectorstore.as_retriever()\n",
     ")\n",
     "\n",
     "# wrap with TruLens\n",
-    "truchain = TruChain(qa,\n",
+    "tru_chain_v2 = TruChain(qa,\n",
     "    app_id='Chain2_WikipediaQA',\n",
     "    feedbacks=[qa_relevance, qs_relevance])"
    ]
@@ -461,11 +489,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "truchain(\"Name some famous dental floss brands?\")\n",
-    "truchain(\"Which year did Cincinatti become the Capital of Ohio?\")\n",
-    "truchain(\"Which year was Hawaii's state song written?\")\n",
-    "truchain(\"How many countries are there in the world?\")\n",
-    "truchain(\"How many total major trophies has manchester united won?\")"
+    "with tru_chain_v2 as recording:\n",
+    "    for prompt in prompts:\n",
+    "        chain_v2(prompt)"
    ]
   },
   {
@@ -524,14 +550,14 @@
     ")\n",
     "\n",
     "# recreate qa from vector store\n",
-    "qa = RetrievalQA.from_chain_type(\n",
+    "chain_v3 = RetrievalQA.from_chain_type(\n",
     "    llm=llm,\n",
     "    chain_type=\"stuff\",\n",
     "    retriever=vectorstore.as_retriever()\n",
     ")\n",
     "\n",
     "# wrap with TruLens\n",
-    "truchain = TruChain(qa,\n",
+    "tru_chain_v3 = TruChain(chain_v3,\n",
     "    app_id='Chain3_WikipediaQA',\n",
     "    feedbacks=[qa_relevance, qs_relevance])"
    ]
@@ -542,14 +568,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "truchain(\"Name some famous dental floss brands?\")\n",
-    "truchain(\"Which year did Cincinatti become the Capital of Ohio?\")\n",
-    "truchain(\"Which year was Hawaii's state song written?\")\n",
-    "truchain(\"How many countries are there in the world?\")\n",
-    "truchain(\"How many total major trophies has manchester united won?\")"
+    "with tru_chain_v3 as recording:\n",
+    "    for prompt in prompts:\n",
+    "        chain_v3(prompt)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -581,14 +606,14 @@
     ")\n",
     "\n",
     "from langchain.chains import RetrievalQAWithSourcesChain\n",
-    "qa_with_sources = RetrievalQA.from_chain_type(\n",
+    "chain_with_sources = RetrievalQA.from_chain_type(\n",
     "    llm=llm,\n",
     "    chain_type=\"stuff\",\n",
     "    retriever=vectorstore.as_retriever()\n",
     ")\n",
     "\n",
     "# wrap with TruLens\n",
-    "truchain = TruChain(qa_with_sources,\n",
+    "tru_chain_with_sources = TruChain(chain_with_sources,\n",
     "    app_id='Chain4_WikipediaQA',\n",
     "    feedbacks=[qa_relevance, qs_relevance])"
    ]
@@ -599,14 +624,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "truchain(\"Name some famous dental floss brands?\")\n",
-    "truchain(\"Which year did Cincinatti become the Capital of Ohio?\")\n",
-    "truchain(\"Which year was Hawaii's state song written?\")\n",
-    "truchain(\"How many countries are there in the world?\")\n",
-    "truchain(\"How many total major trophies has manchester united won?\")"
+    "with tru_chain_with_sources as recording:\n",
+    "    for prompt in prompts:\n",
+    "        chain_with_sources(prompt)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -627,7 +651,7 @@
     "    temperature=0\n",
     ")\n",
     "\n",
-    "qa= RetrievalQA.from_chain_type(\n",
+    "chain_v5 =  RetrievalQA.from_chain_type(\n",
     "    llm=llm,\n",
     "    chain_type=\"stuff\",\n",
     "    retriever=vectorstore.as_retriever(top_k = 1)\n",
@@ -635,6 +659,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -648,12 +673,12 @@
    "outputs": [],
    "source": [
     "\n",
-    "qs_relevance = Feedback(openai.qs_relevance).on_input().on(\n",
+    "qs_relevance = Feedback(openai.qs_relevance, name = \"Context Relevance\").on_input().on(\n",
     "    Select.Record.app.combine_documents_chain._call.args.inputs.input_documents[:1].page_content\n",
     ").aggregate(np.mean)\n",
     "\n",
     "# wrap with TruLens\n",
-    "truchain = TruChain(qa,\n",
+    "tru_chain_v5 = TruChain(chain_v5,\n",
     "    app_id='Chain5_WikipediaQA',\n",
     "    feedbacks=[qa_relevance, qs_relevance])"
    ]
@@ -664,14 +689,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "truchain(\"Name some famous dental floss brands?\")\n",
-    "truchain(\"Which year did Cincinatti become the Capital of Ohio?\")\n",
-    "truchain(\"Which year was Hawaii's state song written?\")\n",
-    "truchain(\"How many countries are there in the world?\")\n",
-    "truchain(\"How many total major trophies has manchester united won?\")"
+    "with tru_chain_v5 as recording:\n",
+    "    for prompt in prompts:\n",
+    "        chain_v5(prompt)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
