--- a/trulens_eval/examples/frameworks/langchain/langchain_groundtruth.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_groundtruth.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -14,6 +15,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -26,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ! pip install trulens_eval==0.9.0 langchain==0.0.263"
+    "# ! pip install trulens==0.11.0 langchain==0.0.283"
    ]
   },
   {
@@ -46,6 +48,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -65,6 +68,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -95,6 +99,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -120,6 +125,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -141,12 +147,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Instrumented query engine can operate like the original:\n",
-    "tc(\"¿quien invento la bombilla?\")\n",
-    "tc(\"who invented the lightbulb?\")"
+    "# Instrumented query engine can operate as a context manager:\n",
+    "with tc as recording:\n",
+    "    chain(\"¿quien invento la bombilla?\")\n",
+    "    chain(\"who invented the lightbulb?\")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
