--- a/trulens_eval/examples/frameworks/langchain/langchain_model_comparison.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_model_comparison.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -14,6 +15,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -26,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ! pip install trulens==0.9.0 langchain==0.0.263"
+    "# ! pip install trulens==0.11.0 langchain==0.0.283"
    ]
   },
   {
@@ -67,6 +69,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -88,6 +91,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -110,6 +114,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -134,6 +139,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -198,6 +204,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -217,12 +224,16 @@
     "    ]\n",
     "\n",
     "for prompt in prompts:\n",
-    "    smallflan_app(prompt)\n",
-    "    largeflan_app(prompt)\n",
-    "    davinci_app(prompt)"
+    "    with smallflan_app as recording:\n",
+    "        smallflan_chain(prompt)\n",
+    "    with largeflan_app as recording:\n",
+    "        largeflan_chain(prompt)\n",
+    "    with davinci_app as recording:\n",
+    "        davinci_chain(prompt)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
