--- a/trulens_eval/examples/frameworks/llama_index/llama_index_groundtruth.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llama_index_groundtruth.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -14,6 +15,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -26,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#! pip install trulens-eval==0.9.0 llama_index==0.7.16"
+    "#! pip install trulens_eval==0.11.0 llama_index==0.8.21"
    ]
   },
   {
@@ -40,12 +42,20 @@
     "\n",
     "from trulens_eval import TruLlama, Feedback, Tru, feedback, FeedbackMode\n",
     "from trulens_eval.feedback import GroundTruthAgreement\n",
-    "from trulens_eval.util import jsonify\n",
     "tru = Tru()"
-
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tru.reset_database()"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -65,6 +75,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -88,6 +99,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -129,6 +141,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -148,6 +161,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -162,12 +176,13 @@
    "source": [
     "#Run and evaluate on groundtruth questions\n",
     "for pair in golden_set:\n",
-    "    llm_response = tru_query_engine.query(pair['query'])\n",
-    "    print(llm_response)\n",
-    "    "
+    "    with tru_query_engine as recording:\n",
+    "        llm_response = query_engine.query(pair['query'])\n",
+    "        print(llm_response)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -186,6 +201,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
