--- a/trulens_eval/examples/langchain_quickstart.ipynb
+++ b/trulens_eval/examples/langchain_quickstart.ipynb
@@ -158,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "truchain = TruChain(chain,\n",
+    "tru_chain = TruChain(chain,\n",
     "    app_id='Chain1_ChatApplication',\n",
     "    feedbacks=[f_lang_match],\n",
     "    tags = \"prototype\")"
@@ -171,9 +171,13 @@
    "outputs": [],
    "source": [
     "# Instrumented chain can operate like the original:\n",
-    "llm_response = truchain(prompt_input)\n",
+    "llm_response = tru_chain(prompt_input)\n",
     "\n",
-    "display(llm_response)"
+    "display(llm_response)\n",
+    "\n",
+    "# or as a context manager\n",
+    "with tru_chain as recording:\n",
+    "    chain(prompt_input)"
    ]
   },
   {
@@ -277,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
