--- a/trulens_eval/examples/models/azure_openai_llama_index.ipynb
+++ b/trulens_eval/examples/models/azure_openai_llama_index.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#! pip install trulens-eval==0.11.0 llama_index==0.8.3 langchain==0.0.248 html2text==2020.1.16"
+    "#! pip install trulens-eval==0.11.0 llama_index==0.8.21 langchain==0.0.268 html2text==2020.1.16"
    ]
   },
   {
@@ -178,16 +178,16 @@
     "azopenai = feedback.AzureOpenAI(model_engine=\"gpt-35-turbo\", deployment_id=\"...\")\n",
     "\n",
     "# Question/answer relevance between overall question and answer.\n",
-    "f_qa_relevance = Feedback(azopenai.relevance).on_input_output()\n",
+    "f_qa_relevance = Feedback(azopenai.relevance, name = \"Answer Relevance\").on_input_output()\n",
     "\n",
     "# Question/statement relevance between question and each context chunk.\n",
-    "f_qs_relevance = Feedback(azopenai.qs_relevance).on_input().on(\n",
+    "f_qs_relevance = Feedback(azopenai.qs_relevance, name = \"Context Relevance\").on_input().on(\n",
     "    TruLlama.select_source_nodes().node.text\n",
     ").aggregate(np.mean)\n",
     "\n",
     "# groundedness of output on the context\n",
     "groundedness = feedback.Groundedness(summarize_provider=azopenai, groundedness_provider=azopenai)\n",
-    "f_groundedness = Feedback(groundedness.groundedness_measure).on(TruLlama.select_source_nodes().node.text).on_output()"
+    "f_groundedness = Feedback(groundedness.groundedness_measure, name = \"Groundedness\").on(TruLlama.select_source_nodes().node.text).on_output()"
    ]
   },
   {
@@ -216,11 +216,11 @@
    "outputs": [],
    "source": [
     "query = \"What is most interesting about this essay?\"\n",
-    "answer = tru_query_engine.query(query)\n",
-    "\n",
-    "print(answer.get_formatted_sources())\n",
-    "print(\"query was:\", query)\n",
-    "print(\"answer was:\", answer)"
+    "with tru_query_engine as recording:\n",
+    "    answer = query_engine.query(query)\n",
+    "    print(answer.get_formatted_sources())\n",
+    "    print(\"query was:\", query)\n",
+    "    print(\"answer was:\", answer)"
    ]
   },
   {
