--- a/trulens_eval/examples/no_framework_quickstart.ipynb
+++ b/trulens_eval/examples/no_framework_quickstart.ipynb
@@ -117,7 +117,7 @@
    "outputs": [],
    "source": [
     "prompt_input=\"How good is language AI?\"\n",
-    "prompt_output=llm_standalone(prompt_input)\n",
+    "prompt_output = llm_standalone(prompt_input)\n",
     "prompt_output"
    ]
   },
@@ -166,19 +166,8 @@
    "outputs": [],
    "source": [
     "from trulens_eval import TruBasicApp\n",
-    "basic_app = TruBasicApp(llm_standalone, app_id=\"Happy Bot\", feedbacks=[f_sentiment])\n",
-    "hash_app = TruBasicApp(simple_hash_callable, app_id=\"Hasher\", feedbacks=[f_sentiment])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "response, record = basic_app.call_with_record(prompt_input)"
+    "tru_llm_standalone = TruBasicApp(llm_standalone, app_id=\"Happy Bot\", feedbacks=[f_sentiment])\n",
+    "tru_simple_hash_callable = TruBasicApp(simple_hash_callable, app_id=\"Hasher\", feedbacks=[f_sentiment])"
    ]
   },
   {
@@ -187,7 +176,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response, record = hash_app.call_with_record(prompt_input)"
+    "with tru_llm_standalone as recording:\n",
+    "    llm_standalone(prompt_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tru_simple_hash_callable as recording:\n",
+    "    simple_hash_callable(prompt_input)"
    ]
   },
   {
@@ -237,9 +237,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "trulens-llm-3",
+   "display_name": "milvus",
    "language": "python",
-   "name": "trulens-llm-3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -251,12 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "d5737f6101ac92451320b0e41890107145710b89f85909f3780d702e7818f973"
-   }
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
