dummy provider and threading bugfix (#418)
* example and bugfix to queue full

* minor

* typo

* PR comments

---------

Co-authored-by: rshih32 <rick@ailens.io>

--- a/trulens_eval/examples/frameworks/custom/custom_example.ipynb
+++ b/trulens_eval/examples/frameworks/custom/custom_example.ipynb
@@ -15,21 +15,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "from pathlib import Path\n",
-    "import sys\n",
-    "\n",
-    "# If running from github repo, can use this:\n",
-    "sys.path.append(str(Path().cwd().parent.parent.parent.resolve()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from examples.frameworks.custom.custom_app import CustomApp # our custom app\n",
     "\n",
     "from trulens_eval.tru_custom_app import TruCustomApp\n",
@@ -124,9 +109,7 @@
    "source": [
     "# Start the dasshboard. If you running from github repo, you will need to adjust\n",
     "# the path the dashboard streamlit app starts in by providing the _dev argument.\n",
-    "tru.start_dashboard(\n",
-    "    force=True, _dev=Path().cwd().parent.parent.parent.resolve()\n",
-    ")"
+    "tru.start_dashboard()"
    ]
   },
   {
